WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
268565
Ghostery throws exception trying to use storageArea.set()
https://bugs.webkit.org/show_bug.cgi?id=268565
Summary
Ghostery throws exception trying to use storageArea.set()
Timothy Hatcher
Reported
2024-02-01 11:16:21 PST
When trying to enable Ghostery, the tab it opens is throwing an exception and not enabling Ghostery as a result. [Error] Unhandled Promise Rejection: Error: Invalid call to storageArea.set(). The 'items' value is invalid, because it is not JSON-serializable. (anonymous function) (store.js:1240)
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-02-01 11:16:32 PST
<
rdar://problem/122118152
>
Timothy Hatcher
Comment 2
2024-02-01 14:28:13 PST
Pull request:
https://github.com/WebKit/WebKit/pull/23691
EWS
Comment 3
2024-02-01 15:37:58 PST
Committed
273949@main
(944eaf18a9d6): <
https://commits.webkit.org/273949@main
> Reviewed commits have been landed. Closing PR #23691 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug